<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="click_add_new_comic">Click + to add a new comic</string>
    <string name="hint_series">Series</string>
    <string name="hint_chapter">Chapter</string>
    <string name="hint_title">Title*</string>
    <string name="hint_description">Description</string>
    <string name="hint_number_of_chapter">Number of chapter</string>
    <string name="button_search">Search</string>
    <string name="chapter_title">Chapter Title*</string>
    <string name="chapter_number">Chapter Number*</string>
    <string name="title_library_series_search">Series Search</string>
    <string name="title_library_chapter_form">Chapter Data</string>
    <string name="manual">Manual insert</string>
    <string name="next">Next</string>
    <string name="add">Save new</string>
    <string name="required_input">This input is not optional</string>
    <string name="required_inputs">Fill all the required input</string>
    <string name="entry_already_exist">There is already an entry with this name:</string>
    <string name="pick_cover_image">Pick cover image</string>
    <string name="what_is_the_name_of_the_series">What is the name of the series?</string>
    <string name="manual_insert">Manual insert</string>
    <string name="search_comics">Search comics</string>
    <string name="picked_cover_image">Picked cover image</string>
    <string name="pick_file">Pick file</string>
    <string name="pick_another_file">Pick another file</string>
    <string name="selected_file">Selected file</string>
</resources>