<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/U_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="@dimen/U_35"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/U_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="@dimen/U_35"
                android:layout_height="@dimen/U_25"
                android:layout_weight="1"
                android:gravity="start"
                android:hint="@string/hint_description"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="1000"
                android:scrollHorizontally="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/U_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_of_chapter"
                android:layout_width="@dimen/U_35"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/hint_number_of_chapter"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/U_10">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/baseline_broken_image_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pick_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Pick cover image"
                android:textSize="12sp"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>